# aiohttp-micro

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  Dockerfile  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  release.yml
aiohttp_micro/: __init__.py  handlers.py  middlewares.py
aiohttp_micro/management/: server.py
src/aiohttp_micro/: __init__.py  __main__.py  app.py  entities.py  exceptions.py  middlewares.py  schemas.py
src/aiohttp_micro/cli/: server.py
src/aiohttp_micro/core/: entities.py  schemas.py
src/aiohttp_micro/core/tools/: consul.py  zipkin.py
src/aiohttp_micro/handlers/: __init__.py  meta.py
src/aiohttp_micro/management/: server.py
src/aiohttp_micro/tools/: consul.py
src/aiohttp_micro/web/: middlewares.py  schemas.py
src/aiohttp_micro/web/handlers/: __init__.py  meta.py  metrics.py  openapi.py
src/aiohttp_micro/web/middlewares/: __init__.py  logging.py  metrics.py  tracing.py
tests/: conftest.py  test_handlers.py  test_schemas.py
tests/handlers/: test_openapi.py
