[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "aiohttp_micro"
version = "0.7.0"
description = "Collection of useful things for aiohttp.web-based microservices"
authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: AsyncIO",
]
packages = [
    { include = "aiohttp_micro", from = "src" },
]

[tool.poetry.dependencies]
aiodns = "^2.0.0"
aiohttp = "^3.6.0"
aiozipkin = "^1.0.0"
apispec = {extras = ["validation"], version = "^4.4.2"}
cchardet = "^2.1.4"
click = "^7.0"
config = {git = "https://github.com/clayman083/config.git", rev = "v0.3.0"}
marshmallow = "^3.4.0"
prometheus-client = "^0.9.0"
python = "^3.8"
sentry-sdk = "^0.12.2"
structlog = "^20.1.0"
uvloop = "^0.16.0"
orjson = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
coverage = "*"
faker = "*"
flake8 = "*"
flake8-aaa = "*"
flake8-bugbear = "*"
flake8-builtins-unleashed = "*"
flake8-comprehensions = "*"
flake8-import-order = "*"
flake8-print = "*"
flake8-pytest = "*"
mypy = "*"
pytest = "*"
pytest-aiohttp = "*"
pytest-cov = "^3.0.0"
pytest-faker = "^2.0.0"
pytest-mock = "^3.6.1"
pytest-xdist = {extras = ["psutil"], version = "^2.4.0"}
rope = "*"
types-click = "^7.1.7"
